Collapsed navbar menu gap fixed

--- a/src/components/navBar/navBar.scss
+++ b/src/components/navBar/navBar.scss
@@ -46,7 +46,7 @@
             display: none; 
             flex-direction: column;
             position: absolute;
-            top: 102px;
+            top: 92px;
             left: 0px;
             background-color: #3A3A3A;
             width: 100%;
